--- a/Client/Questin.xaml
+++ b/Client/Questin.xaml
@@ -2,15 +2,33 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Client.Questin"
-             Title="Questin"
-             Loaded="ContentPage_Loaded">
-    <VerticalStackLayout>
+             
+             Loaded="ContentPage_Loaded"
+             >
+    <VerticalStackLayout WidthRequest="800" HeightRequest="300">
 
+        <Button
+          x:Name="CounterLog13"
+          SemanticProperties.Hint="Counts the number of times you click"
+          Clicked="CounterLog13_Clicked"
+          Text="←"
+          VerticalOptions="Start"
+          BorderColor="Black"
+          BorderWidth="2"
+          BackgroundColor="White"
+          TextColor="Black"
+          HorizontalOptions="Start"
+          FontSize="36" 
+          HeightRequest="10"
+          WidthRequest="50"
+          Margin="30,-3,0,20"
+          Padding="10"      
+        />
+        
         <Entry x:Name="nameEntrу5" FontSize="16"
              Placeholder ="Введите вопросы"
-             Margin="10"
-             TextChanged="nameEntrу5_TextChanged"
-               
+             Margin="50,0,0,0"
+             TextChanged="nameEntrу5_TextChanged"   
              VerticalOptions="Start"
              HorizontalOptions="Start"
              HeightRequest="20"
@@ -20,7 +38,7 @@
 
         <Entry x:Name="nameEntrу9" FontSize="16"
              Placeholder ="Введите ответ"
-             Margin="10"
+             Margin="50,10,0,0"
              TextChanged="nameEntrу9_TextChanged"
              VerticalOptions="Start"
              HorizontalOptions="Start"
@@ -30,32 +48,35 @@
         />
         <Button
                 x:Name="CounterLog12"
-                 Text="Сохранить Тест "
+                 Text="Сохранить"
                  SemanticProperties.Hint="Counts the number of times you click"
                 Clicked="CounterLog12_Clicked"
                  VerticalOptions="Start"
                 HorizontalOptions="Start"
                 FontSize="16" HeightRequest="10"
-                WidthRequest="310"
-                Margin="10"
+                WidthRequest="160"
+                Margin="50,10,0,0"
                 Padding="10"
         />
 
         <Button
                 x:Name="CounterLog14"
-                 Text="Добавить в тест"
+                 Text="Добавить "
                  SemanticProperties.Hint="Counts the number of times you click"
                 Clicked="CounterLog14_Clicked"
                  VerticalOptions="Start"
                 HorizontalOptions="Start"
                 FontSize="16" HeightRequest="10"
-                WidthRequest="310"
-                Margin="10"
+                WidthRequest="160"
+                Margin="230,-44,0,50"
                 Padding="10"
         />
         
-        <Grid x:Name="Табличка" Margin="300, -190, 0,0">
-            <Border Stroke="Gray" BackgroundColor="White" WidthRequest="800" HeightRequest="450" >
+        <Grid x:Name="Табличка" Margin="300, -200, 0,0">
+            <Border Stroke="Gray" BackgroundColor="White" WidthRequest="240" HeightRequest="150" >
+             <Border.StrokeShape>
+                <RoundRectangle CornerRadius="3" />
+            </Border.StrokeShape>
                 <ListView x:Name="usersList"  
                           CachingStrategy="RecycleElementAndDataTemplate"
                  ItemSelected="usersList_ItemSelected"
@@ -64,19 +85,7 @@
 
             </Border>
         </Grid>
-        <Label x:Name="selected" Text="Здесь"
-               Margin="40, -190, 0,0"/>
-        <Button
-                x:Name="CounterLog13"
-                 Text="Вернуться к администраторским настройкам"
-                 SemanticProperties.Hint="Counts the number of times you click"
-                Clicked="CounterLog13_Clicked"
-                 VerticalOptions="Start"
-                HorizontalOptions="Start"
-                FontSize="16" HeightRequest="10"
-                WidthRequest="440"
-                Margin="10"
-                Padding="10"
-        />
+   
+        
     </VerticalStackLayout>
 </ContentPage>
