--- a/Client/Администратор.xaml
+++ b/Client/Администратор.xaml
@@ -1,56 +1,82 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Client.Администратор"
-              >
-    <VerticalStackLayout>
+             x:Class="Client.Администратор">
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
 
-        <Button
-          x:Name="CounterLog3"
-        
-          SemanticProperties.Hint="Counts the number of times you click"
-          Clicked="CounterLog2_Clicked"
-            Text="←"
-          VerticalOptions="Start"
-          BorderColor="Black"
-          BorderWidth="2"
-          BackgroundColor="White"
-          TextColor="Black"
-          HorizontalOptions="Start"
-          FontSize="36" 
-          HeightRequest="10"
-          WidthRequest="50"
-          Margin="-1,-46,0,0"
-          Padding="10"      
-         />
-
-        <Grid x:Name="Табличка"  WidthRequest="800" HeightRequest="800">
-
+        <StackLayout Grid.Row="0">
             <Button
+                x:Name="CounterLog3"
+                SemanticProperties.Hint="Counts the number of times you click"
+                Clicked="CounterLog2_Clicked"
+                Text="←"
+                VerticalOptions="Start"
+                BorderColor="Black"
+                BorderWidth="2"
+                BackgroundColor="White"
+                TextColor="Black"
+                HorizontalOptions="Start"
+                FontSize="36"
+                HeightRequest="10"
+                WidthRequest="50"
+                Margin="-1,-46,0,0"
+                Padding="10" />
+
+            <Grid x:Name="Табличка" WidthRequest="800" HeightRequest="1000">
+                <Button
                     x:Name="CounterLog1"
                     Text="Справочник вопросов"
                     SemanticProperties.Hint="Counts the number of times you click"
                     Clicked="CounterLog1_Clicked"
                     VerticalOptions="Start"
                     HorizontalOptions="CenterAndExpand"
-                    FontSize="16" HeightRequest="10"
+                    FontSize="16"
+                    HeightRequest="10"
                     WidthRequest="320"
                     Margin="0,80,0,0"
-                    Padding="10"
-                   />
+                    Padding="10" />
 
-            <Button
+                <Button
                     x:Name="CounterLog2"
-                    Text="Справочник тестов"
+                    Text="Справочник пользователей"
                     SemanticProperties.Hint="Counts the number of times you click"
                     Clicked="CounterLog3_Clicked"
                     VerticalOptions="Start"
                     HorizontalOptions="CenterAndExpand"
-                    FontSize="16" HeightRequest="10"
+                    FontSize="16"
+                    HeightRequest="10"
                     WidthRequest="320"
                     Margin="0,20,0,0"
-                    Padding="10"
-                  />
-        </Grid>
-    </VerticalStackLayout>
+                    Padding="10" />
+
+                <Button
+                    x:Name="CounterLog4"
+                    Text="Справочник пользователей"
+                    SemanticProperties.Hint="Counts the number of times you click"
+                    Clicked="CounterLog4_Clicked"
+                    VerticalOptions="Start"
+                    HorizontalOptions="CenterAndExpand"
+                    FontSize="16"
+                    HeightRequest="10"
+                    WidthRequest="320"
+                    Margin="0,140,0,0"
+                    Padding="10" />
+            </Grid>
+        </StackLayout>
+
+        <Button
+            Grid.Row="1"
+            Text="Назад"
+            Clicked="GoBack"
+            VerticalOptions="End"
+            HorizontalOptions="CenterAndExpand"
+            FontSize="16"
+            HeightRequest="10"
+            WidthRequest="{Binding Width, Source={x:Reference Табличка}}"
+            Padding="10" />
+    </Grid>
 </ContentPage>
