Загружается перечень пользователей

--- a/Client/Project/RefUserListPage.xaml
+++ b/Client/Project/RefUserListPage.xaml
@@ -2,7 +2,8 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"  
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"  
              x:Class="Client.Project.RefUserListPage"  
-             Title="Справочник пользователей">
+             Title="Справочник пользователей"
+             Loaded="ContentPage_Loaded">
 
     <ContentPage.Content>
         <Grid>
