--- a/Client/Project/Main/Admin.xaml
+++ b/Client/Project/Main/Admin.xaml
@@ -65,6 +65,19 @@
                     WidthRequest="320"
                     Margin="0,140,0,0"
                     Padding="10" />
+                <Button
+                    x:Name="CounterLogTest"
+                    Text="Справочник тестов"
+                    SemanticProperties.Hint="Counts the number of times you click"
+                    Clicked="CounterLogTest_Clicked"
+                    VerticalOptions="Start"
+                    HorizontalOptions="CenterAndExpand"
+                    FontSize="16"
+                    HeightRequest="10"
+                    WidthRequest="320"
+                    Margin="0,200,0,0"
+                    Padding="10" />
+
             </Grid>
         </StackLayout>
 
