--- a/Client/Project/Ref/RefTest/TestCreate.xaml
+++ b/Client/Project/Ref/RefTest/TestCreate.xaml
@@ -9,6 +9,7 @@
             <Grid.RowDefinitions>
                 <RowDefinition Height="*" />
                 <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
 
             <StackLayout Grid.Row="0" Margin="10">
@@ -25,6 +26,10 @@
             <StackLayout Grid.Row="1" Orientation="Horizontal" HorizontalOptions="Center" Margin="10">
                 <Button Text="Сохранить" Clicked="SaveButton_Click" />
                 <Button Text="Отмена" Clicked="CancelButton_Click" />
+            </StackLayout>
+
+            <StackLayout Grid.Row="2" Orientation="Horizontal" HorizontalOptions="Center" Margin="10">
+                <Button Text="Вопросы" Clicked="Questing" />
             </StackLayout>
         </Grid>
     </ContentPage.Content>
