--- a/Client/Project/Doc/DocExamTest/DocUserExamsListPage.xaml
+++ b/Client/Project/Doc/DocExamTest/DocUserExamsListPage.xaml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"      
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"      
-             x:Class="Client.Project.DocQuestionAnswerListPage"      
-             Title="Перечень ответов"    
+<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"       
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"       
+             x:Class="Client.Project.DocUserExamsListPage"       
+             Title="Перечень экзаменов"     
              Loaded="ContentPageLoaded">
 
     <ContentPage.Content>
@@ -12,8 +12,8 @@
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
-            <ListView x:Name="QuestionList"      
-                      ItemSelected="OnItemSelected"    
+            <ListView x:Name="ExamsList"       
+                      ItemSelected="OnItemSelected"     
                       ItemsSource="{Binding UserExams}">
                 <ListView.ItemTemplate>
                     <DataTemplate>
@@ -25,28 +25,28 @@
                                     <ColumnDefinition Width="*" />
                                     <ColumnDefinition Width="*" />
                                 </Grid.ColumnDefinitions>
-                                <Label Text="{Binding QuestionAnswer.Answer.AnswerOptions}" Grid.Column="0"    
-                                        FontSize="16"    
-                                        FontFamily="Arial"    
-                                        FontAttributes="Bold"    
-                                        TextColor="Red"    
-                                        HorizontalTextAlignment="Center"    
+                                <Label Text="{Binding UserExams.Exams.Name_exam}" Grid.Column="0"     
+                                        FontSize="16"     
+                                        FontFamily="Arial"     
+                                        FontAttributes="Bold"     
+                                        TextColor="Red"     
+                                        HorizontalTextAlignment="Center"     
                                         VerticalTextAlignment="Center" />
-                                <Button Text="Редактировать"      
-                                        Command="{Binding EditCommand}"      
+                                <Button Text="Редактировать"       
+                                        Command="{Binding EditCommand}"       
                                         CommandParameter="{Binding .}" Grid.Column="1" />
-                                <Button Text="Удалить"      
-                                        Command="{Binding DelCommand}"      
-                                        CommandParameter="{Binding .}" Grid.Column="2"     
+                                <Button Text="Удалить"       
+                                        Command="{Binding DelCommand}"       
+                                        CommandParameter="{Binding .}" Grid.Column="2"      
                                         IsVisible="True" />
                             </Grid>
                         </ViewCell>
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
-            <Button Text="Добавить ответ"    
+            <Button Text="Добавить экзамен"     
                     Clicked="CreateButtonClicked" Grid.Row="1" />
-            <Button Text="Назад"      
+            <Button Text="Назад"       
                     Clicked="GoBack" Grid.Row="2" />
         </Grid>
     </ContentPage.Content>
