--- a/Client/Project/Doc/DocExamTest/DocExamTestListPage.xaml
+++ b/Client/Project/Doc/DocExamTest/DocExamTestListPage.xaml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"       
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"       
-             x:Class="Client.Project.DocUserExamsListPage"       
-             Title="Перечень экзаменов"     
+<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             x:Class="Client.Project.DocExamTestListPage"
+             Title="Перечень тестов"
              Loaded="ContentPageLoaded">
-
     <ContentPage.Content>
         <Grid>
             <Grid.RowDefinitions>
@@ -12,9 +11,9 @@
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
-            <ListView x:Name="ExamsList"       
-                      ItemSelected="OnItemSelected"     
-                      ItemsSource="{Binding UserExams}">
+            <ListView x:Name="TestList"
+                      ItemSelected="OnItemSelected"
+                      ItemsSource="{Binding ExamsTest}">
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <ViewCell>
@@ -25,28 +24,28 @@
                                     <ColumnDefinition Width="*" />
                                     <ColumnDefinition Width="*" />
                                 </Grid.ColumnDefinitions>
-                                <Label Text="{Binding UserExams.Exams.Name_exam}" Grid.Column="0"     
-                                        FontSize="16"     
-                                        FontFamily="Arial"     
-                                        FontAttributes="Bold"     
-                                        TextColor="Red"     
-                                        HorizontalTextAlignment="Center"     
+                                <Label Text="{Binding ExamsTest.Test.Name_Test}" Grid.Column="0"
+                                        FontSize="16"
+                                        FontFamily="Arial"
+                                        FontAttributes="Bold"
+                                        TextColor="Red"
+                                        HorizontalTextAlignment="Center"
                                         VerticalTextAlignment="Center" />
-                                <Button Text="Редактировать"       
-                                        Command="{Binding EditCommand}"       
+                                <Button Text="Редактировать"
+                                        Command="{Binding EditCommand}"
                                         CommandParameter="{Binding .}" Grid.Column="1" />
-                                <Button Text="Удалить"       
-                                        Command="{Binding DelCommand}"       
-                                        CommandParameter="{Binding .}" Grid.Column="2"      
+                                <Button Text="Удалить"
+                                        Command="{Binding DelCommand}"
+                                        CommandParameter="{Binding .}" Grid.Column="2"
                                         IsVisible="True" />
                             </Grid>
                         </ViewCell>
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
-            <Button Text="Добавить экзамен"     
+            <Button Text="Добавить тест"
                     Clicked="CreateButtonClicked" Grid.Row="1" />
-            <Button Text="Назад"       
+            <Button Text="Назад"
                     Clicked="GoBack" Grid.Row="2" />
         </Grid>
     </ContentPage.Content>
