--- a/Client/Project/Main/Admin.xaml
+++ b/Client/Project/Main/Admin.xaml
@@ -2,7 +2,17 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"  
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
              Title="Интерфейс администратора"
-             x:Class="Client.Администратор">
+             xmlns:views="clr-namespace:Client"
+             xmlns:sys="clr-namespace:System;assembly=netstandard"
+             xmlns:controls="clr-namespace:Client.Controls"
+             x:Class="Client.Main.Admin">
+
+    <Shell.TitleView>
+        <Image Source="dotnet_bot.png"
+               HorizontalOptions="Center"
+               VerticalOptions="Center" />
+    </Shell.TitleView>
+
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
@@ -10,48 +20,8 @@
         </Grid.RowDefinitions>
 
         <StackLayout Grid.Row="0">
-            <!--<Button 
-                x:Name="CounterLog3" 
-                SemanticProperties.Hint="Counts the number of times you click" 
-                Clicked="CounterLog2_Clicked" 
-                Text="←" 
-                VerticalOptions="Start" 
-                BorderColor="Black" 
-                BorderWidth="2" 
-                BackgroundColor="White" 
-                TextColor="Black" 
-                HorizontalOptions="Start" 
-                FontSize="36" 
-                HeightRequest="50" 
-                WidthRequest="100" 
-                Margin="-1,-46,0,0" 
-                Padding="10" />-->
 
             <Grid x:Name="Табличка" WidthRequest="800" HeightRequest="1000">
-                <!--<Button--> 
-                    <!--x:Name="CounterLog1" 
-                    Text="Справочник вопросов" 
-                    SemanticProperties.Hint="Counts the number of times you click" 
-                    Clicked="CounterLog1_Clicked" 
-                    VerticalOptions="Start" 
-                    HorizontalOptions="CenterAndExpand" 
-                    HeightRequest="50" 
-                    WidthRequest="320" 
-                    Margin="0,80,0,0" 
-                    Padding="10" />
-
-                <Button 
-                    x:Name="CounterLog2" 
-                    Text="Справочник пользователей" 
-                    SemanticProperties.Hint="Counts the number of times you click" 
-                    Clicked="CounterLog3_Clicked" 
-                    VerticalOptions="Start" 
-                    HorizontalOptions="CenterAndExpand" 
-                    HeightRequest="50" 
-                    WidthRequest="320" 
-                    Margin="0,20,0,0" 
-                    Padding="10" />-->
-
                 <Button 
                     x:Name="CounterLog4" 
                     Text="Справочник пользователей" 
@@ -108,9 +78,6 @@
                     WidthRequest="320" 
                     Margin="0,380,0,0" 
                     Padding="10" />
-
-
-
             </Grid>
         </StackLayout>
 
