Максим сделал часть окон для пользователя

--- a/Client/Users/Doc/DocTheExamisPersonal/DocTheExamisPersonal.xaml
+++ b/Client/Users/Doc/DocTheExamisPersonal/DocTheExamisPersonal.xaml
@@ -1,12 +1,60 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui" 
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
              x:Class="Client.Users.Doc.DocTheExamisPersonal.DocTheExamisPersonal"
              Title="DocTheExamisPersonal">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+    
+    <ContentPage.Content>
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+            </Grid.RowDefinitions>
+            <ListView x:Name="TestList" 
+                      ItemSelected="TestList_ItemSelected" 
+                      ItemsSource="{Binding ExamsTest}">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <ViewCell>
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="2*" />
+                                    <!-- Ширина в 2/3 -->
+                                    <ColumnDefinition Width="*" />
+                                    <ColumnDefinition Width="*" />
+                                </Grid.ColumnDefinitions>
+                                <Label Text="{Binding ExamsTest.Test.Name_Test}" Grid.Column="0" 
+                                        FontSize="16" 
+                                        FontFamily="Arial" 
+                                        FontAttributes="Bold" 
+                                        TextColor="Red" 
+                                        HorizontalTextAlignment="Center" 
+                                        VerticalTextAlignment="Center" />
+                            </Grid>
+                        </ViewCell>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+
+            <Button Text="Назад" 
+                    Clicked="GoBack" Grid.Row="2" />
+
+            <!-- Добавление таблицы -->
+            <Grid Grid.Row="1">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
+
+
+            </Grid>
+        </Grid>
+    </ContentPage.Content>
 </ContentPage>
