--- a/Client/Users/Doc/DocExamFromTests/DocExamFromTests.xaml
+++ b/Client/Users/Doc/DocExamFromTests/DocExamFromTests.xaml
@@ -1,12 +1,43 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Client.Users.Doc.DocExamFromTests.DocExamFromTests"
-             Title="DocExamFromTests">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"       
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"       
+             x:Class="Client.Users.Doc.DocExamFromTests.DocExamFromTests"       
+          >
+    <ContentPage.Content>
+        <AbsoluteLayout>
+            <Image Source="dotnet_bot.png"  
+                   AbsoluteLayout.LayoutFlags="PositionProportional"  
+                   AbsoluteLayout.LayoutBounds="1, 0, 50, 50" />
+            <Grid AbsoluteLayout.LayoutFlags="All" AbsoluteLayout.LayoutBounds="0, 0, 1, 1">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
+                <StackLayout Orientation="Vertical"    
+                             HorizontalOptions="FillAndExpand"    
+                             VerticalOptions="Start"    
+                             Margin="10"   
+                             Grid.Row="0">
+                    <Button Text="Экзамен"   
+                            WidthRequest="320"  
+                            Clicked="ExamButtonClicked" />
+                    <Button Text="Достижения"   
+                            WidthRequest="320"  
+                            Clicked="AchievementsButtonClicked" />
+                    <Button Text="Настройки"   
+                            WidthRequest="320"  
+                            Clicked="SettingsButtonClicked" />
+                </StackLayout>
+                <Button   
+                Grid.Row="1"   
+                Text="Назад"   
+                Clicked="GoBack"   
+                VerticalOptions="End"   
+                HorizontalOptions="FillAndExpand"   
+                HeightRequest="50"   
+                Padding="10" />
+            </Grid>
+        </AbsoluteLayout>
+    </ContentPage.Content>
 </ContentPage>
